added conditional formatting based on current time

--- a/index.html
+++ b/index.html
@@ -29,10 +29,20 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <div class="timeBlock" id="tb1">
+        <span>9AM</span><input type="text" class="timeBlock" />
+      </div>
+      <div class="timeBlock" id="tb2"><span>10AM</span></div>
+      <div class="timeBlock" id="tb3"><span>11AM</span></div>
+      <div class="timeBlock" id="tb4"><span>12PM</span></div>
+      <div class="timeBlock" id="tb5"><span>1PM</span></div>
+      <div class="timeBlock" id="tb6"><span>2PM</span></div>
+      <div class="timeBlock" id="tb7"><span>3PM</span></div>
+      <div class="timeBlock" id="tb8"><span>4PM</span></div>
+      <div class="timeBlock" id="tb8"><span>5PM</span></div>
     </div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
