--- a/index.html
+++ b/index.html
@@ -28,9 +28,16 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
-      <div class="timeBlock" id="tb1">
-        <span>9AM</span><input type="text" class="timeBlock" />
+    <div class="container-fluid">
+      <div class="row" id="tb1">
+        <div class="hour col-12 col-md-3 col-lg-3">9AM</div>
+        <div class="time-block form-outline col-12 col-md-6 col-lg-6">
+          <label class="sr-only" for="9AM">9AM</label>
+          <input class="form-control" type="text" />
+        </div>
+        <div class="saveBtn col-12 col-md-3 col-lg-3">
+          <i class="fas fa-save"></i>
+        </div>
       </div>
       <div class="timeBlock" id="tb2"><span>10AM</span></div>
       <div class="timeBlock" id="tb3"><span>11AM</span></div>
