v1 styling for forms

--- a/index.html
+++ b/index.html
@@ -29,24 +29,159 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container-fluid">
-      <div class="row" id="tb1">
-        <div class="hour col-12 col-md-3 col-lg-3">9AM</div>
-        <div class="time-block form-outline col-12 col-md-6 col-lg-6">
-          <label class="sr-only" for="9AM">9AM</label>
-          <input class="form-control" type="text" />
+      <form class="form-horizontal">
+        <div class="form-group">
+          <label class="sr-only" for="9am">9AM</label>
+          <div class="input-group">
+            <div class="hour input-group-addon">9AM</div>
+            <input
+              type="text"
+              class="time-block form-control"
+              id="9am"
+              placeholder=""
+            />
+            <div class="saveBtn input-group-addon">
+              <i class="fas fa-save"></i>
+            </div>
+          </div>
         </div>
-        <div class="saveBtn col-12 col-md-3 col-lg-3">
-          <i class="fas fa-save"></i>
+      </form>
+      <form class="form-horizontal">
+        <div class="form-group">
+          <label class="sr-only" for="10am">10AM</label>
+          <div class="input-group">
+            <div class="hour input-group-addon">10AM</div>
+            <input
+              type="text"
+              class="time-block form-control"
+              id="10am"
+              placeholder=""
+            />
+            <div class="saveBtn input-group-addon">
+              <i class="fas fa-save"></i>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="timeBlock" id="tb2"><span>10AM</span></div>
-      <div class="timeBlock" id="tb3"><span>11AM</span></div>
-      <div class="timeBlock" id="tb4"><span>12PM</span></div>
-      <div class="timeBlock" id="tb5"><span>1PM</span></div>
-      <div class="timeBlock" id="tb6"><span>2PM</span></div>
-      <div class="timeBlock" id="tb7"><span>3PM</span></div>
-      <div class="timeBlock" id="tb8"><span>4PM</span></div>
-      <div class="timeBlock" id="tb8"><span>5PM</span></div>
+      </form>
+      <form class="form-horizontal">
+        <div class="form-group">
+          <label class="sr-only" for="11am">11AM</label>
+          <div class="input-group">
+            <div class="hour input-group-addon">11AM</div>
+            <input
+              type="text"
+              class="time-block form-control"
+              id="11am"
+              placeholder=""
+            />
+            <div class="saveBtn input-group-addon">
+              <i class="fas fa-save"></i>
+            </div>
+          </div>
+        </div>
+      </form>
+      <form class="form-horizontal">
+        <div class="form-group">
+          <label class="sr-only" for="12pm">12PM</label>
+          <div class="input-group">
+            <div class="hour input-group-addon">12PM</div>
+            <input
+              type="text"
+              class="time-block form-control"
+              id="12pm"
+              placeholder=""
+            />
+            <div class="saveBtn input-group-addon">
+              <i class="fas fa-save"></i>
+            </div>
+          </div>
+        </div>
+      </form>
+      <form class="form-horizontal">
+        <div class="form-group">
+          <label class="sr-only" for="1pm">1PM</label>
+          <div class="input-group">
+            <div class="hour input-group-addon">1PM</div>
+            <input
+              type="text"
+              class="time-block form-control"
+              id="1pm"
+              placeholder=""
+            />
+            <div class="saveBtn input-group-addon">
+              <i class="fas fa-save"></i>
+            </div>
+          </div>
+        </div>
+      </form>
+      <form class="form-horizontal">
+        <div class="form-group">
+          <label class="sr-only" for="2pm">2pm</label>
+          <div class="input-group">
+            <div class="hour input-group-addon">2pm</div>
+            <input
+              type="text"
+              class="time-block form-control"
+              id="2pm"
+              placeholder=""
+            />
+            <div class="saveBtn input-group-addon">
+              <i class="fas fa-save"></i>
+            </div>
+          </div>
+        </div>
+      </form>
+      <form class="form-horizontal">
+        <div class="form-group">
+          <label class="sr-only" for="3pm">3PM</label>
+          <div class="input-group">
+            <div class="hour input-group-addon">3PM</div>
+            <input
+              type="text"
+              class="time-block form-control"
+              id="3pm"
+              placeholder=""
+            />
+            <div class="saveBtn input-group-addon">
+              <i class="fas fa-save"></i>
+            </div>
+          </div>
+        </div>
+      </form>
+      <form class="form-horizontal">
+        <div class="form-group">
+          <label class="sr-only" for="4pm">4PM</label>
+          <div class="input-group">
+            <div class="hour input-group-addon">4PM</div>
+            <input
+              type="text"
+              class="time-block form-control"
+              id="4pm"
+              placeholder=""
+            />
+            <div class="saveBtn input-group-addon">
+              <i class="fas fa-save"></i>
+            </div>
+          </div>
+        </div>
+      </form>
+      <form class="form-horizontal">
+        <div class="form-group">
+          <label class="sr-only" for="5pm">5PM</label>
+          <div class="input-group">
+            <div class="hour input-group-addon">5PM</div>
+            <input
+              type="text"
+              class="time-block form-control"
+              id="5pm"
+              placeholder=""
+            />
+            <div class="saveBtn input-group-addon">
+              <i class="fas fa-save"></i>
+            </div>
+          </div>
+        </div>
+      </form>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
