data entered know goes to localData

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container-fluid">
-      <form class="form-horizontal">
+      <div class="form-horizontal" id="form1">
         <div class="form-group">
           <label class="sr-only" for="9am">9AM</label>
           <div class="input-group">
@@ -45,7 +45,7 @@
             </div>
           </div>
         </div>
-      </form>
+      </div>
       <form class="form-horizontal">
         <div class="form-group">
           <label class="sr-only" for="10am">10AM</label>
