added functionality to all divs, clicking save btn still doesn't work

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </div>
         </div>
       </div>
-      <form class="form-horizontal">
+      <div class="form-horizontal" id="form1">
         <div class="form-group">
           <label class="sr-only" for="10am">10AM</label>
           <div class="input-group">
@@ -62,8 +62,8 @@
             </div>
           </div>
         </div>
-      </form>
-      <form class="form-horizontal">
+      </div>
+      <div class="form-horizontal" id="form1">
         <div class="form-group">
           <label class="sr-only" for="11am">11AM</label>
           <div class="input-group">
@@ -79,8 +79,8 @@
             </div>
           </div>
         </div>
-      </form>
-      <form class="form-horizontal">
+      </div>
+      <div class="form-horizontal" id="form1">
         <div class="form-group">
           <label class="sr-only" for="12pm">12PM</label>
           <div class="input-group">
@@ -96,8 +96,8 @@
             </div>
           </div>
         </div>
-      </form>
-      <form class="form-horizontal">
+      </div>
+      <div class="form-horizontal" id="form1">
         <div class="form-group">
           <label class="sr-only" for="1pm">1PM</label>
           <div class="input-group">
@@ -113,12 +113,12 @@
             </div>
           </div>
         </div>
-      </form>
-      <form class="form-horizontal">
+      </div>
+      <div class="form-horizontal" id="form1">
         <div class="form-group">
-          <label class="sr-only" for="2pm">2pm</label>
+          <label class="sr-only" for="1pm">2PM</label>
           <div class="input-group">
-            <div class="hour input-group-addon">2pm</div>
+            <div class="hour input-group-addon">2PM</div>
             <input
               type="text"
               class="time-block form-control"
@@ -130,8 +130,8 @@
             </div>
           </div>
         </div>
-      </form>
-      <form class="form-horizontal">
+      </div>
+      <div class="form-horizontal" id="form1">
         <div class="form-group">
           <label class="sr-only" for="3pm">3PM</label>
           <div class="input-group">
@@ -147,8 +147,8 @@
             </div>
           </div>
         </div>
-      </form>
-      <form class="form-horizontal">
+      </div>
+      <div class="form-horizontal" id="form1">
         <div class="form-group">
           <label class="sr-only" for="4pm">4PM</label>
           <div class="input-group">
@@ -164,8 +164,8 @@
             </div>
           </div>
         </div>
-      </form>
-      <form class="form-horizontal">
+      </div>
+      <div class="form-horizontal" id="form1">
         <div class="form-group">
           <label class="sr-only" for="5pm">5PM</label>
           <div class="input-group">
@@ -181,7 +181,7 @@
             </div>
           </div>
         </div>
-      </form>
+      </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
